# Arq

./: .gitignore  CHANGELOG.md  Cargo.toml  README  README.md  dist-workspace.toml  release.toml
.cargo/: config.toml
.github/: release.yml
.github/workflows/: ci.yml
crates/arq-cli/: Cargo.toml
crates/arq-cli/src/: banner.rs  main.rs
crates/arq-cli/src/serve/: graph.rs  handlers.rs  mod.rs  models.rs  templates.rs
crates/arq-cli/src/serve/templates/: app.js  index.html  styles.css
crates/arq-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/arq-cli/src/tui/components/: chat.rs  input.rs  mod.rs  progress.rs  tabs.rs
crates/arq-core/: Cargo.toml
crates/arq-core/src/: lib.rs  manager.rs  phase.rs  task.rs
crates/arq-core/src/agent/: executor.rs  mod.rs
crates/arq-core/src/config/: defaults.rs  mod.rs
crates/arq-core/src/context/: mod.rs
crates/arq-core/src/knowledge/: db.rs  embedder.rs  error.rs  mod.rs
crates/arq-core/src/knowledge/indexer/: extractor.rs  generic.rs  mod.rs  patterns.rs
crates/arq-core/src/knowledge/models/: chunk.rs  mod.rs  node.rs
crates/arq-core/src/knowledge/ontology/: mod.rs
crates/arq-core/src/knowledge/ontology/edges/: api.rs  behavioral.rs  mod.rs  structural.rs  type_system.rs
crates/arq-core/src/knowledge/ontology/nodes/: api.rs  code.rs  mod.rs  structure.rs  test.rs
crates/arq-core/src/knowledge/parser/: csharp.rs  go.rs  java.rs  mod.rs  python.rs  registry.rs  result.rs  rust.rs  traits.rs  treesitter.rs  typescript.rs
crates/arq-core/src/llm/: claude.rs  error.rs  mod.rs  openai.rs  provider.rs
crates/arq-core/src/planning/: mod.rs  plan.rs
crates/arq-core/src/research/: document.rs  mod.rs  prompts.rs  runner.rs
crates/arq-core/src/storage/: error.rs  file.rs  mod.rs
crates/arq-core/tests/: config_tests.rs  context_tests.rs  llm_tests.rs  manager_tests.rs  phase_tests.rs  planning_tests.rs  research_tests.rs  storage_tests.rs  task_tests.rs
docs-concepts/: agent-phase  planning-phase  research-phase.md
scripts/: release.sh
