[package]
name = "arq-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Arq - spec-driven AI coding tool"

[[bin]]
name = "arq"
path = "src/main.rs"

[dependencies]
arq-core = { path = "../arq-core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# TUI dependencies
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
color-eyre = "0.6"
chrono = "0.4"

# Web server for visualization
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
open = "5"
