[package]
name = "arq-cli"
version = "0.1.0"
edition = "2021"
description = "Arq - AI-powered code analysis and research tool with semantic search and knowledge graph visualization"
license = "MIT"
repository = "https://github.com/AssahBismarkabah/Arq"
homepage = "https://github.com/AssahBismarkabah/Arq"
readme = "../../README.md"
keywords = ["cli", "code-analysis", "knowledge-graph", "ai", "semantic-search"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "arq"
path = "src/main.rs"

[dependencies]
arq-core = { path = "../arq-core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# TUI dependencies
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
color-eyre = "0.6"
chrono = "0.4"

# Web server for visualization
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
open = "5"
