[package]
name = "arq-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Arq - spec-driven AI coding tool"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
ignore = "0.4"
toml = "0.8"
dirs = "5.0"

# Knowledge graph
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }
fastembed = "4"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
