[package]
name = "arq-core"
version = "0.2.1"
edition = "2021"
description = "Core library for Arq - AI-powered code analysis with semantic search and knowledge graph"
license = "MIT"
repository = "https://github.com/AssahBismarkabah/Arq"
homepage = "https://github.com/AssahBismarkabah/Arq"
keywords = ["code-analysis", "knowledge-graph", "embeddings", "semantic-search"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
ignore = "0.4"
toml = "0.8"
dirs = "5.0"

# Knowledge graph
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }
fastembed = "4"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"

# Rust parsing
syn = { version = "2.0", features = ["full", "visit", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Multi-language parsing (tree-sitter)
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
tempfile = "3.10"
